fix navigation button overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,7 @@ body {
   flex-wrap: wrap;
   margin-left: 313px;
   gap: 16px;
+  align-items: center;
 }
 
 .navigation-user-item {
@@ -158,11 +159,13 @@ body {
   line-height: 10px;
   text-align: center;
   position: absolute;
-  bottom: 15px;
+  top: -10px;
   left: 20px;
 }
 
 .navigation-user .navigation-button {
+  box-sizing: border-box;
+  border: none;
   color: #ffffff;
   text-decoration: none;
   background-color: rgba(117, 97, 87, 1);
@@ -170,12 +173,12 @@ body {
   text-align: center;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 8px 34px;
+  padding: 8px 0;
+  width: 160px;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  vertical-align: middle;
   text-transform: uppercase;
   cursor: pointer;
 }
